前端配置排数

--- a/ticket-bot-plugin/popup/form/form.html
+++ b/ticket-bot-plugin/popup/form/form.html
@@ -33,4 +33,8 @@
         <label for="section">Preferred Sections:</label>
         <input type="text" id="section" name="section" placeholder="Enter Sections (e.g., A, B, C)">
     </div>
+    <div class="form-row">
+        <label for="target-row-count">Target Row Count (选座排数):</label>
+        <input type="number" id="target-row-count" name="target-row-count" min="1" placeholder="4" value="4">
+    </div>
 </fieldset>
